# SPARClet

./: Generating_Flatmap_tutorial (1).ipynb  Generating_Flatmap_tutorial.ipynb  Generating_maps.ipynb  README.md  Untitled.ipynb  proposal.md
.ipynb_checkpoints/: Generating_Flatmap_tutorial-checkpoint.ipynb  flatmapGenerator.ipynb
LeafLet AddOn Tutorial/: generating_maps.py
sparclet_python_package/: MANIFEST  README  ReadMe.md  pyproject.toml  setup.py
sparclet_python_package/sparclet/: __init__.py  __main__.py  helpers.py
sparclet_python_package/sparclet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
temp/: Vagus_test_Folium.ipynb
